# koolstof

./: .gitignore  .readthedocs.yaml  .travis.yml  .zenodo.json  404.html  CNAME  README.md  airica.py  index.html  ksdbs.py  mkdocs.yml  my_vptree.pkl  pyproject.toml  requirements.txt  setup.cfg  setup.py  sitemap.xml  test_koolstof.py
.github/workflows/: docs.yml  python-package.yml  run-tests.yml
.misc/: coverage.txt
data/: Humphreys_peakform.dbs  Humphreys_peakform.xlsx  Humphreys_peakform_00.txt  Humphreys_peakform_01.txt  Humphreys_peakform_02.txt  Humphreys_peakform_03.txt  Humphreys_peakform_04.txt  Humphreys_peakform_20200706.txt
data/Humphreys_peakform/: Humphreys_peakform.dbs  crm.txt
docs/: index.md  infrared.md  maps.md  requirements.txt  spectro.md  vindta.md
infrared/: index.html
koolstof/: __init__.py  airica.py  atomic.py  coulometer.py  crm.py  maps.py  meta.py  misc.py  molar.py  optode.py  parameterisations.py  quaatro.py  spectro.py  vindta.py
koolstof/infrared/: __init__.py  baseline.py  io.py
koolstof/plot/: __init__.py  profiles.py
koolstof/spectro/: __init__.py  oxygen.py
koolstof/vindta/: __init__.py  dbs.py  get.py  io.py  manipulate.py  plot.py  process.py  read.py
maps/: index.html
misc/: coverage.txt
search/: search_index.json
spectro/: index.html
tests/: test_airica.py  test_coulometer.py  test_infrared.py  test_koolstof.py  test_optode.py  test_parameterisations.py  test_quaatro.py  test_vindta.py  test_vindta_new.py  test_vptree.py
tests/data/: logfile_20200407.bak  test_coulometer.txt
tests/data/test_airica/: LD_storage_test.dbs  storage_test_Sept21.xlsx
tests/data/test_optode/: spreadsheet.xlsx
tests/data/test_optode/2021-07-13_122537_CRM-186-0859/: 2021-07-13_122537_CRM-186-0859.pyr  2021-07-13_122537_CRM-186-0859.txt
tests/data/test_optode/2021-07-13_122537_CRM-186-0859/ChannelData/: PICO-pH_(A Ch.1)_pH.txt  PICO-pH_(A T1)_TempPT100Port.txt
tests/data/test_optode/2021-07-13_124827_CRM-186-0505/: 2021-07-13_124827_CRM-186-0505.pyr  2021-07-13_124827_CRM-186-0505.txt
tests/data/test_optode/2021-07-13_124827_CRM-186-0505/ChannelData/: PICO-pH_(A Ch.1)_pH.txt  PICO-pH_(A T1)_TempPT100Port.txt
tests/data/test_optode/2021-07-13_133337_NOORDWK20_2021004474/: 2021-07-13_133337_NOORDWK20_2021004474.pyr  2021-07-13_133337_NOORDWK20_2021004474.txt
tests/data/test_optode/2021-07-13_133337_NOORDWK20_2021004474/ChannelData/: PICO-pH_(A Ch.1)_pH.txt  PICO-pH_(A T1)_TempPT100Port.txt
tests/data/test_optode/2021-07-13_135621_NOORDWK70_2021004473/: 2021-07-13_135621_NOORDWK70_2021004473.pyr  2021-07-13_135621_NOORDWK70_2021004473.txt
tests/data/test_optode/2021-07-13_135621_NOORDWK70_2021004473/ChannelData/: PICO-pH_(A Ch.1)_pH.txt  PICO-pH_(A T1)_TempPT100Port.txt
tests/data/test_optode/2021-07-13_141827_TERSLG10_2021005549/: 2021-07-13_141827_TERSLG10_2021005549.pyr  2021-07-13_141827_TERSLG10_2021005549.txt
tests/data/test_optode/2021-07-13_141827_TERSLG10_2021005549/ChannelData/: PICO-pH_(A Ch.1)_pH.txt  PICO-pH_(A T1)_TempPT100Port.txt
tests/data/test_optode/2021-07-13_144218_NOORDWK70_2021005550/: 2021-07-13_144218_NOORDWK70_2021005550.pyr  2021-07-13_144218_NOORDWK70_2021005550.txt
tests/data/test_optode/2021-07-13_144218_NOORDWK70_2021005550/ChannelData/: PICO-pH_(A Ch.1)_pH.txt  PICO-pH_(A T1)_TempPT100Port.txt
tests/data/test_optode/2021-07-13_150413_NOORDWK10_2021005553/: 2021-07-13_150413_NOORDWK10_2021005553.pyr  2021-07-13_150413_NOORDWK10_2021005553.txt
tests/data/test_optode/2021-07-13_150413_NOORDWK10_2021005553/ChannelData/: PICO-pH_(A Ch.1)_pH.txt  PICO-pH_(A T1)_TempPT100Port.txt
tests/data/test_optode/2021-07-13_152614_NOORDWK20_2021005551/: 2021-07-13_152614_NOORDWK20_2021005551.pyr  2021-07-13_152614_NOORDWK20_2021005551.txt
tests/data/test_optode/2021-07-13_152614_NOORDWK20_2021005551/ChannelData/: PICO-pH_(A Ch.1)_pH.txt  PICO-pH_(A T1)_TempPT100Port.txt
tests/data/test_optode/2021-07-13_154824_NOORDWK20_2021004879/: 2021-07-13_154824_NOORDWK20_2021004879.pyr  2021-07-13_154824_NOORDWK20_2021004879.txt
tests/data/test_optode/2021-07-13_154824_NOORDWK20_2021004879/ChannelData/: PICO-pH_(A Ch.1)_pH.txt  PICO-pH_(A T1)_TempPT100Port.txt  StatusLegend.txt
tests/data/test_optode/2021-07-13_161047_NOORDWK2_2021005552/: 2021-07-13_161047_NOORDWK2_2021005552.pyr  2021-07-13_161047_NOORDWK2_2021005552.txt
tests/data/test_optode/2021-07-13_161047_NOORDWK2_2021005552/ChannelData/: PICO-pH_(A Ch.1)_pH.txt  PICO-pH_(A T1)_TempPT100Port.txt
tests/data/test_optode/2021-07-13_163246_TERSLG10_2021005966/: 2021-07-13_163246_TERSLG10_2021005966.pyr  2021-07-13_163246_TERSLG10_2021005966.txt
tests/data/test_optode/2021-07-13_163246_TERSLG10_2021005966/ChannelData/: PICO-pH_(A Ch.1)_pH.txt  PICO-pH_(A T1)_TempPT100Port.txt
tests/data/test_optode/2021-07-13_165522_WALCRN70_2021005958/: 2021-07-13_165522_WALCRN70_2021005958.pyr  2021-07-13_165522_WALCRN70_2021005958.txt
vindta/: index.html
(+2 files in other folders)
