[metadata]
name = koolstof
version = attr: koolstof.__version__
author = attr: koolstof.__author__
author_email = m.p.humphreys@icloud.com
description = Miscellaneous tools for marine carbonate chemistry and other such things
url = https://github.com/mvdh7/koolstof
long_description = file: README.md
long_description_content_type = text/markdown
license = GPL-3.0-or-later
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Natural Language :: English
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Chemistry
    Topic :: Scientific/Engineering :: Visualization

[options]
install_requires =
    calkulate
    matplotlib
    numpy
    pandas
    PyCO2SYS
    scikit-learn
    scipy
    seaborn
packages = find:
